test_regress/t/t_event_control_unsup.out
%Error-UNSUPPORTED: t/t_event_control_unsup.v:14:7: Unsupported: event control statement in this location
                                                  : ... In instance t
                                                  : ... Suggest have one event control statement per procedure, at the top of the procedure
   14 |       @(clk);
      |       ^
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_event_control_unsup.v:16:7: Unsupported: event control statement in this location
                                                  : ... In instance t
                                                  : ... Suggest have one event control statement per procedure, at the top of the procedure
   16 |       @(clk);
      |       ^
%Error: Exiting due to
